add Cofinancing Levels creating